pamc/src/tests/sample_code/should_fail/single_file/parse/illegal_underscore/let.ph
type U {
    .U: U,
}

let _ = U.U;
